still trying to fix backend, issues with email security

--- a/private/.env
+++ b/private/.env
@@ -1,4 +1,3 @@
-EMAIL=your_email@gmail.com
-EMAIL_PASSWORD=your_email_password_or_app_password
-RECIPIENT_EMAIL=recipient_email@gmail.com
+EMAIL=goldenblade111@hotmail.com
+EMAIL_PASSWORD=Pastyboy21749!
  #not filled out for public repository
