--- a/private/.env
+++ b/private/.env
@@ -1,3 +1,3 @@
-EMAIL=goldenblade111@hotmail.com
-EMAIL_PASSWORD=Pastyboy21749!
+EMAIL=scottfleming@btinternet.com
+EMAIL_PASSWORD=cM8FrNUx5fx%b*z
  #not filled out for public repository
